[gd_scene load_steps=5 format=3 uid="uid://cdlnay02u4fdb"]

[ext_resource type="Texture2D" uid="uid://rwpsbgom5abk" path="res://arrow back.png" id="1_d64nr"]
[ext_resource type="Script" uid="uid://bio02ln1k8gw" path="res://recuperar.gd" id="1_yc3ap"]
[ext_resource type="Texture2D" uid="uid://bd61g6fiuwms8" path="res://minimal3.webp" id="2_gfmeu"]
[ext_resource type="Script" uid="uid://bnwckymgyx8ad" path="res://minimal_3.gd" id="3_u6r88"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_yc3ap")

[node name="Minimal3" type="Sprite2D" parent="."]
position = Vector2(576.5, 317)
scale = Vector2(1.89352, 1.83882)
texture = ExtResource("2_gfmeu")
script = ExtResource("3_u6r88")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="UI"]
layout_mode = 0
offset_left = 256.0
offset_top = 109.0
offset_right = 913.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 60
text = "Recuperação de Senha"

[node name="ButtonRecuperarSenha" type="Button" parent="UI"]
layout_mode = 0
offset_left = 438.0
offset_top = 480.0
offset_right = 698.0
offset_bottom = 568.0
text = "RECUPERAR CONTA"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 196.0
offset_top = 280.0
offset_right = 924.0
offset_bottom = 471.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "E-mail:                                "

[node name="LineEditInsiraEmail" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
placeholder_text = "Insira o E-mail da Sua Conta"

[node name="ArrowBack" type="TextureButton" parent="."]
offset_left = 86.0
offset_top = 80.0
offset_right = 598.0
offset_bottom = 592.0
scale = Vector2(0.243164, 0.200195)
texture_normal = ExtResource("1_d64nr")

[node name="LabelMensagem" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]
